example/lib/src/l10n/errors/app_pa.arb
{
  "@@locale": "pa",
  "error": "An error occurred",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "An unexpected error occurred",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "ਬੱਗ ਰਿਪੋਰਟ ਸਫਲਤਾਪੂਰਵਕ ਭੇਜੀ ਗਈ ਹੈ.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}